--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -3,6 +3,11 @@
     font-family: 'Roboto', sans-serif;
 }
 
+.home-page-one-container .home-logo-container{
+margin: 0px auto;
+width: 100%;
+}
+
 .home-page-one {
     height: 100vh;
     width: 100%;
@@ -13,9 +18,17 @@
     box-sizing: border-box;
 }
 
+.home-page-one > div {
+/*    padding-left: 20px;
+    padding-right: 20px;*/
+    max-width: 600px;
+}
+
 .home-center-container {
     display: flex;
     flex-direction: column;
+    margin: 0px auto;
+    width: 100%;
 }
 
 
